# domain-security-scanner

./: README.md  pyproject.toml
app/: config.py  main.py  routes.py  routes_scan.py  security.py
app/api/: routes_scan.py
app/core/: config.py
app/db/: models.py  session.py
app/scanner/: engine.py  scoring.py  security.py
app/static/: index.html  scan_result.html  styles.css
test/: test.html
